[project]
name = "strategy-backtest"
version = "0.1.0"
description = ""
authors = [
    {name = "r0nny8000",email = "r0nny8000@bea2b.de"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
